src/app/collections/collection-item/collection-item.component.css
.collection-container {
    display: flex;
    align-items: center;
    padding: 1.25rem;
    border-radius: 0.5rem;
    background: var(--primary-color);
    transition: var(--tran-05);
    transition-property: background;
    background-size: cover;
    background-repeat: no-repeat;
    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -4px rgba(0, 0, 0, .1);
    cursor: pointer;
    height: 8rem;
}

.collection-container:hover {
    margin-top: -3px;
    transition: margin-top ease .1s;
}

.collection-color {
    width: 3rem;
    height: 3rem;
    border: none;
    padding: 0;
    cursor: pointer;
    margin-right: 1.25rem;
}

.collection-name,
.collection-input {
    margin-right: 1.25rem;
}

.collection-name {
    color: white;
    margin-bottom: 0;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    font-weight: 600;
}

.collection-input {
    width: 100%;
    margin-bottom: 0.25rem;
    font-weight: 600;
    outline: none;
    border: none;
}

.collection-book-count {
    margin-bottom: 0;
    color: white;
    font-size: 0.9rem;
}

.dropdown {
    margin-left: auto;
}

.dropdown:hover {
    color: gainsboro;
}

.dropdown-menu {
    transform: translateX(-85%);
    --bs-dropdown-link-active-bg: var(--secondary-button);
    user-select: none;
}

